// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "thousand",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=always, compactDisplay=long 2`] = `"+10 thousand–+20 thousand"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=always, compactDisplay=long 3`] = `"+10 thousand–+20 thousand"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "compact",
    "value": "K",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=always, compactDisplay=short 2`] = `"+10K–+20K"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=always, compactDisplay=short 3`] = `"+10K–+20K"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "thousand",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=auto, compactDisplay=long 2`] = `"10 thousand–20 thousand"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=auto, compactDisplay=long 3`] = `"10 thousand–20 thousand"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "compact",
    "value": "K",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=auto, compactDisplay=short 2`] = `"10K–20K"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=auto, compactDisplay=short 3`] = `"10K–20K"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "thousand",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10 thousand–+20 thousand"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10 thousand–+20 thousand"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "compact",
    "value": "K",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10K–+20K"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10K–+20K"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "literal",
    "value": " ",
  },
  {
    "type": "compact",
    "value": "thousand",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=never, compactDisplay=long 2`] = `"10 thousand–20 thousand"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=never, compactDisplay=long 3`] = `"10 thousand–20 thousand"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "compact",
    "value": "K",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=never, compactDisplay=short 2`] = `"10K–20K"`;

exports[`Intl.NumberFormat en-GB > notation=compact, signDisplay=never, compactDisplay=short 3`] = `"10K–20K"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=always, compactDisplay=long 2`] = `"+10E3–+20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=always, compactDisplay=long 3`] = `"+10E3–+20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=always, compactDisplay=short 2`] = `"+10E3–+20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=always, compactDisplay=short 3`] = `"+10E3–+20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=auto, compactDisplay=long 2`] = `"10E3–20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=auto, compactDisplay=long 3`] = `"10E3–20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=auto, compactDisplay=short 2`] = `"10E3–20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=auto, compactDisplay=short 3`] = `"10E3–20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10E3–+20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10E3–+20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10E3–+20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10E3–+20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=never, compactDisplay=long 2`] = `"10E3–20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=never, compactDisplay=long 3`] = `"10E3–20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "3",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=never, compactDisplay=short 2`] = `"10E3–20E3"`;

exports[`Intl.NumberFormat en-GB > notation=engineering, signDisplay=never, compactDisplay=short 3`] = `"10E3–20E3"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=always, compactDisplay=long 2`] = `"+1E4–+2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=always, compactDisplay=long 3`] = `"+1E4–+2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=always, compactDisplay=short 2`] = `"+1E4–+2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=always, compactDisplay=short 3`] = `"+1E4–+2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=auto, compactDisplay=long 2`] = `"1E4–2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=auto, compactDisplay=long 3`] = `"1E4–2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=auto, compactDisplay=short 2`] = `"1E4–2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=auto, compactDisplay=short 3`] = `"1E4–2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=exceptZero, compactDisplay=long 2`] = `"+1E4–+2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=exceptZero, compactDisplay=long 3`] = `"+1E4–+2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=exceptZero, compactDisplay=short 2`] = `"+1E4–+2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=exceptZero, compactDisplay=short 3`] = `"+1E4–+2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=never, compactDisplay=long 2`] = `"1E4–2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=never, compactDisplay=long 3`] = `"1E4–2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "1",
  },
  {
    "type": "exponentSeparator",
    "value": "E",
  },
  {
    "type": "exponentInteger",
    "value": "4",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=never, compactDisplay=short 2`] = `"1E4–2E4"`;

exports[`Intl.NumberFormat en-GB > notation=scientific, signDisplay=never, compactDisplay=short 3`] = `"1E4–2E4"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=always, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": ",",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=always, compactDisplay=long 2`] = `"+10,000–+20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=always, compactDisplay=long 3`] = `"+10,000–+20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=always, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": ",",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=always, compactDisplay=short 2`] = `"+10,000–+20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=always, compactDisplay=short 3`] = `"+10,000–+20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=auto, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": ",",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=auto, compactDisplay=long 2`] = `"10,000–20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=auto, compactDisplay=long 3`] = `"10,000–20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=auto, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": ",",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=auto, compactDisplay=short 2`] = `"10,000–20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=auto, compactDisplay=short 3`] = `"10,000–20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=exceptZero, compactDisplay=long 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": ",",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=exceptZero, compactDisplay=long 2`] = `"+10,000–+20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=exceptZero, compactDisplay=long 3`] = `"+10,000–+20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=exceptZero, compactDisplay=short 1`] = `
[
  {
    "type": "plusSign",
    "value": "+",
  },
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": ",",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=exceptZero, compactDisplay=short 2`] = `"+10,000–+20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=exceptZero, compactDisplay=short 3`] = `"+10,000–+20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=never, compactDisplay=long 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": ",",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=never, compactDisplay=long 2`] = `"10,000–20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=never, compactDisplay=long 3`] = `"10,000–20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=never, compactDisplay=short 1`] = `
[
  {
    "type": "integer",
    "value": "10",
  },
  {
    "type": "group",
    "value": ",",
  },
  {
    "type": "integer",
    "value": "000",
  },
]
`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=never, compactDisplay=short 2`] = `"10,000–20,000"`;

exports[`Intl.NumberFormat en-GB > notation=standard, signDisplay=never, compactDisplay=short 3`] = `"10,000–20,000"`;
